fix styling to reduce spacing

--- a/view/frontend/web/css/pagebuilder/structural/_column.less
+++ b/view/frontend/web/css/pagebuilder/structural/_column.less
@@ -55,7 +55,7 @@
 
 .@{prefix}-column {
   float:left;
-  padding:0 @margin;
+  padding:0 @margin/2;
   box-sizing:border-box;
   min-height:1px;
   &.right { float:right;}
