--- a/view/frontend/web/css/pagebuilder/structural/_row.less
+++ b/view/frontend/web/css/pagebuilder/structural/_row.less
@@ -9,8 +9,8 @@
  */
 
 .@{prefix}-row {
-  margin-left:-@margin;
-  margin-right:-@margin;
+  margin-left:-@margin/2;
+  margin-right:-@margin/2;
   box-sizing:border-box;
   &.with-media-background, &.bluefoot-wrapper-row {
     margin-left:0;
@@ -28,8 +28,8 @@
 .col-main {
   .@{prefix}-row {
     >.@{prefix}-entity {
-      padding-left:@margin;
-      padding-right:@margin;
+      padding-left:@margin/2;
+      padding-right:@margin/2;
       &.no-padding {
         padding-left:0;
         padding-right:0;
